--- a/templates/index.html
+++ b/templates/index.html
@@ -56,8 +56,10 @@
                                         <div name="{{ plant.name | safe }}">Name: {{ plant.name | safe }}</div>
                                         <div name="{{ plant.stock | safe }}">Stock: {{ plant.stock | safe }}</div>
                                         {% if plants.offer != 0 %}
-                                            <div name="{{ plant.price | safe }}" class="IndexInfo1Strike1">Price: {{ plant.price | safe }},00€</div>
-                                            <div name="{{ plant.offer | safe }}" class="IndexInfo1Strike2">Price: {{ plant.price | safe }},00€</div>
+                                            <div class="IndexInfo1Price">
+                                                <div name="{{ plant.price | safe }}" class="IndexInfo1Strike1">Price: {{ plant.price | safe }},00€</div>
+                                                <div name="{{ plant.offer | safe }}" class="IndexInfo1Strike2">{{ plant.offer | safe }},00€</div>
+                                            </div>
                                         {% else %}
                                             <div name="{{ plant.price | safe }}">Price: {{ plant.price | safe }},00€</div>
                                         {% endif %}
@@ -96,8 +98,10 @@
                                         <div name="{{ plant.name | safe  }}">Name: {{ plant.name | safe }}</div>
                                         <div name="{{ plant.stock | safe  }}">Stock: {{ plant.stock | safe }}</div>
                                         {% if plants.offer != 0 %}
-                                            <div name="{{ plant.price | safe }}" class="IndexInfo1Strike1">Price: {{ plant.price | safe }},00€</div>
-                                            <div name="{{ plant.offer | safe }}" class="IndexInfo1Strike2">Price: {{ plant.price | safe }},00€</div>
+                                            <div class="IndexInfo1Price">
+                                                <div name="{{ plant.price | safe }}" class="IndexInfo1Strike1">Price: {{ plant.price | safe }},00€</div>
+                                                <div name="{{ plant.offer | safe }}" class="IndexInfo1Strike2">{{ plant.offer | safe }},00€</div>
+                                            </div>
                                         {% else %}
                                             <div name="{{ plant.price | safe }}">Price: {{ plant.price | safe }},00€</div>
                                         {% endif %}
