--- a/static/styles.css
+++ b/static/styles.css
@@ -636,7 +636,7 @@ button {
 	display: flex;
 	flex-direction: column;
 	flex-wrap: nowrap;
-	justify-content: center;
+	justify-content: flex-start;
 	align-items: stretch;
 	align-content: stretch;
 
