--- a/static/styles.css
+++ b/static/styles.css
@@ -4,8 +4,16 @@
 
 
 body {
+	display: flex;
+	flex-direction: column;
+	flex-wrap: nowrap;
+	justify-content: center;
+	align-items: stretch;
+	align-content: stretch;
+
 	font-family: 'Montserrat', sans-serif;
-	width: 100%
+	width: 100%;
+	text-align: center;
 }
 
 
@@ -13,15 +21,8 @@ body {
 
 
 main {
-	display: flex;
-	flex-direction: column;
-	flex-wrap: nowrap;
-	justify-content: center;
-	align-items: center;
-	align-content: center;
-
-	text-align: center;
 	height: 1000px;
+	width: 1000px;
 }
 
 
