--- a/static/styles.css
+++ b/static/styles.css
@@ -12,7 +12,8 @@ body {
 	align-content: stretch;
 
 	font-family: 'Montserrat', sans-serif;
-	width: 1000px;
+	font-size: 0.75em;
+	width: 100%;
 	text-align: center;
 }
 
@@ -21,13 +22,6 @@ body {
 
 
 main {
-	display: flex;
-	flex-direction: column;
-	flex-wrap: nowrap;
-	justify-content: center;
-	align-items: stretch;
-	align-content: stretch;
-
 	height: 1000px;
 }
 
