--- a/static/styles.css
+++ b/static/styles.css
@@ -4,6 +4,13 @@
 
 
 body {
+	display: flex;
+	flex-direction: column;
+	flex-wrap: nowrap;
+	justify-content: flex-start;
+	align-items: stretch;
+	align-content: stretch;
+
 	font-family: 'Montserrat', sans-serif;
 	font-size: 0.90em;
 	width: 50%;
