--- a/templates/add.html
+++ b/templates/add.html
@@ -47,6 +47,17 @@
                         <input id="offer" autocomplete="off" autofocus class="form-control" name="offer" placeholder="Offer" type="number" min="0">
                     </div>
                 </div>
+                <div class="AddSecond">
+                    <div>
+                        <input id="length" autocomplete="off" autofocus class="form-control" name="length" placeholder="Length" type="number" min="0">
+                    </div>
+                    <div>
+                        <input id="width" autocomplete="off" autofocus class="form-control" name="width" placeholder="Width" type="number" min="0">
+                    </div>
+                    <div>
+                        <input id="height" autocomplete="off" autofocus class="form-control" name="height" placeholder="Height" type="number" min="0">
+                    </div>
+                </div>
             </div>
             <br>
             <div>
