--- a/templates/administration.html
+++ b/templates/administration.html
@@ -62,6 +62,34 @@
                 </tbody>
             </table>
             <br>
+            <table class="TableMain">
+                <thead>
+                    <tr>
+                        <th scope="col">Length</th>
+                        <th scope="col">Width</th>
+                        <th scope="col">Height</th>
+                        <th scope="col">Price DE</th>
+                        <th scope="col">Price EU</th>
+                        <th scope="col">Express</th>
+                    </tr>
+                </thead>
+
+                <tbody>
+                    {% for box in boxes %}
+                        <tr>
+                            <td>{{ box.length | safe }}</td>
+                            <td>{{ box.width | safe }}</td>
+                            <td>{{ box.height | safe }}</td>
+                            <td>{{ box.price_de | safe }},00€</td>
+                            <td>{{ box.price_eu | safe }},00€</td>
+                            <td>{{ box.price_ex | safe }},00€</td>
+                            <td><button name="delete_box" value="{{ box.id }}" type="submit"><img src="/static/trash.svg" alt="delete" height="25"></button></td>
+                            <td><button name="edit_box" value="{{ box.id }}" type="submit"><img src="/static/updateB.svg" alt="edit" height="25"></button></td>
+                        </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+            <br>
             <div>
                 <a href="/add"><img src="/static/add.svg" alt="add" height="50"></a>
             </div>
