--- a/templates/administration.html
+++ b/templates/administration.html
@@ -61,6 +61,10 @@
                     {% endfor %}
                 </tbody>
             </table>
+            <br>
+            <div>
+                <a href="/add"><img src="/static/add.svg" alt="add" height="50"></a>
+            </div>
         </div>
         <br>
         <div class="TableBorder">
