--- a/templates/addBox.html
+++ b/templates/addBox.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block title %}
-    Change
+    Add box
 {% endblock %}
 
 {% block navigation %}
@@ -30,27 +30,9 @@
 {% endblock %}
 
 {% block main %}
-    <form action="/change" method="post">
-        <div class="ChangeMain">
-            <div>
-                <input type='hidden' name='news_id' value='{{ news[0]}}'>
-            </div>
-            <div>
-                <input id="title" autocomplete="off" autofocus class="form-control" name="title" placeholder=" Title" type="text" size="50" value="{{ news[1] }}">
-            </div>
-            <br>
-            <div>
-                {{ ckeditor.create(value= news[2]) }}
-                {{ ckeditor.load(custom_url=url_for('static', filename='ckeditor/ckeditor.js')) }}
-            </div>
-            <br>
-            <div>
-                <button id="submit" type="submit" name="submit" value="submit"><img src="/static/sendmail.svg" alt="sendmail" height="50"></button>
-            </div>
-        </div>
-    </form>
+    Add box page
     <br>
     <div>
-        <a href="/communication"><img src="/static/back.svg" alt="back" height="50"></a>
+        <a href="/"><img src="/static/back.svg" alt="back" height="50"></a>
     </div>
 {% endblock %}
