--- a/templates/administration.html
+++ b/templates/administration.html
@@ -63,7 +63,7 @@
             </table>
             <br>
             <div>
-                <a href="/add"><img src="/static/add.svg" alt="add" height="50"></a>
+                <a href="/addPlant"><img src="/static/add.svg" alt="add" height="50"></a>
             </div>
         </div>
         <br>
@@ -97,7 +97,7 @@
             </table>
             <br>
             <div>
-                <a href="/add"><img src="/static/add.svg" alt="add" height="50"></a>
+                <a href="/addBox"><img src="/static/add.svg" alt="add" height="50"></a>
             </div>
         </div>
     </form>
