--- a/static/styles.css
+++ b/static/styles.css
@@ -661,7 +661,7 @@ button {
 /*  ADD BOX  */
 
 
-.AddPlantMain {
+.AddBoxMain {
 	height: 500px;
 	border-radius: 25px;
 	border: 2px solid #E8E8E8;
