--- a/static/styles.css
+++ b/static/styles.css
@@ -667,3 +667,15 @@ button {
 	border: 2px solid #E8E8E8;
 	padding: 20px; 	
 }
+
+
+/*  EDIT BOX  */
+
+
+.EditBoxMain {
+	height: 500px;
+	border-radius: 25px;
+	border: 2px solid #E8E8E8;
+	padding: 20px; 	
+}
+
