--- a/static/styles.css
+++ b/static/styles.css
@@ -436,7 +436,7 @@ button {
 }
 
 
-/*  AddNews  */
+/*  ADD NEWS  */
 
 
 .AddNewsMain {
@@ -688,5 +688,6 @@ button {
 	border-radius: 25px;
 	border: 2px solid #E8E8E8;
 	padding: 20px; 	
+	width: 750px;
 }
 
