--- a/templates/pay.html
+++ b/templates/pay.html
@@ -49,7 +49,7 @@
             </div>
             <br>
             <div>
-                <input id="additional" autocomplete="off" autofocus class="form-control" name="additional" placeholder=" Additional information" type="text">
+                <textarea id="additional" name="additional" rows="4" cols="200"></textarea>
             </div>
             <br>
             <div>
