--- a/templates/pay.html
+++ b/templates/pay.html
@@ -49,7 +49,7 @@
             </div>
             <br>
             <div>
-                <textarea id="additional" name="additional" rows="5" cols="50"></textarea>
+                <textarea id="additional" name="additional" rows="5" cols="75" placeholder=" Additional information"></textarea>
             </div>
             <br>
             <div>
