--- a/templates/addPlant.html
+++ b/templates/addPlant.html
@@ -34,28 +34,31 @@
         <div class="AddPlantMain">
             <div class="AddPlantFirst">
                 <div>
-                    <input id="name" autocomplete="off" autofocus class="form-control" name="name" placeholder="Name" type="text">
+                    <input id="name" autocomplete="off" autofocus class="form-control" name="name" placeholder=" Name" type="text">
                 </div>
                 <div class="AddPlantSecond">
                     <div>
-                        <input id="stock" autocomplete="off" autofocus class="form-control" name="stock" placeholder="Stock" type="number" min="0">
+                        <input id="stock" autocomplete="off" autofocus class="form-control" name="stock" placeholder=" Stock" type="number" min="0">
                     </div>
                     <div>
-                        <input id="price" autocomplete="off" autofocus class="form-control" name="price" placeholder="Price" type="number" min="0">
+                        <input id="price" autocomplete="off" autofocus class="form-control" name="price" placeholder=" Price" type="number" min="0">
                     </div>
                     <div>
-                        <input id="offer" autocomplete="off" autofocus class="form-control" name="offer" placeholder="Offer" type="number" min="0">
+                        <input id="offer" autocomplete="off" autofocus class="form-control" name="offer" placeholder=" Offer" type="number" min="0">
                     </div>
                 </div>
                 <div class="AddPlantSecond">
                     <div>
-                        <input id="length" autocomplete="off" autofocus class="form-control" name="length" placeholder="Length" type="number" min="0">
+                        <input id="length" autocomplete="off" autofocus class="form-control" name="length" placeholder=" Length (cm)" type="number" min="0">
                     </div>
                     <div>
-                        <input id="width" autocomplete="off" autofocus class="form-control" name="width" placeholder="Width" type="number" min="0">
+                        <input id="width" autocomplete="off" autofocus class="form-control" name="width" placeholder=" Width (cm)" type="number" min="0">
                     </div>
                     <div>
-                        <input id="height" autocomplete="off" autofocus class="form-control" name="height" placeholder="Height" type="number" min="0">
+                        <input id="height" autocomplete="off" autofocus class="form-control" name="height" placeholder=" Height (cm)" type="number" min="0">
+                    </div>
+                    <div>
+                        <input id="weight" autocomplete="off" autofocus class="form-control" name="weight" placeholder=" Weight (g)" type="number" min="0">
                     </div>
                 </div>
             </div>
