--- a/templates/addBox.html
+++ b/templates/addBox.html
@@ -49,15 +49,15 @@
             </div>
             <br>
             <div>
-                <input id="price_de" autocomplete="off" autofocus class="form-control" name="price_de" placeholder=" Price DE" type="number" min="0">
+                <input id="price_de" autocomplete="off" autofocus class="form-control" name="price_de" placeholder=" Price DE" type="number" min="0" step="0.01">
             </div>
             <br>
             <div>
-                <input id="price_eu" autocomplete="off" autofocus class="form-control" name="price_eu" placeholder=" Price EU" type="number" min="0">
+                <input id="price_eu" autocomplete="off" autofocus class="form-control" name="price_eu" placeholder=" Price EU" type="number" min="0" step="0.01">
             </div>
             <br>
             <div>
-                <input id="price_ex" autocomplete="off" autofocus class="form-control" name="price_ex" placeholder=" Express" type="number" min="0">
+                <input id="price_ex" autocomplete="off" autofocus class="form-control" name="price_ex" placeholder=" Express" type="number" min="0" step="0.01">
             </div>
             <br>
             <div>
