--- a/templates/addPlant.html
+++ b/templates/addPlant.html
@@ -41,10 +41,10 @@
                         <input id="stock" autocomplete="off" autofocus class="form-control" name="stock" placeholder=" Stock" type="number" min="0">
                     </div>
                     <div>
-                        <input id="price" autocomplete="off" autofocus class="form-control" name="price" placeholder=" Price" type="number" min="0">
+                        <input id="price" autocomplete="off" autofocus class="form-control" name="price" placeholder=" Price" type="number" min="0" step="0.01">
                     </div>
                     <div>
-                        <input id="offer" autocomplete="off" autofocus class="form-control" name="offer" placeholder=" Offer" type="number" min="0">
+                        <input id="offer" autocomplete="off" autofocus class="form-control" name="offer" placeholder=" Offer" type="number" min="0" step="0.01">
                     </div>
                 </div>
                 <div class="AddPlantSecond">
