--- a/templates/administration.html
+++ b/templates/administration.html
@@ -50,8 +50,8 @@
                         <tr>
                             <td>{{ plant.name | safe }}</td>
                             <td>{{ plant.stock | safe }}</td>
-                            <td>{{ plant.price | safe }},00€</td>
-                            <td>{{ plant.offer | safe }},00€</td>
+                            <td>{{ '%0.2f'|format(plant.price | safe) }}€</td>
+                            <td>{{ '%0.2f'|format(plant.offer | safe) }}€</td>
                             <td><img src="{{ plant.picture | safe }}" alt="plant picture of {{ plant.name | safe }}" height="50"></td>
                             <td>{{ plant.reduced | safe }}</td>
                             <td>{{ plant.show | safe }}</td>
@@ -88,9 +88,9 @@
                             <td>{{ box.length | safe }}</td>
                             <td>{{ box.width | safe }}</td>
                             <td>{{ box.height | safe }}</td>
-                            <td>{{ box.price_de | safe }},00€</td>
-                            <td>{{ box.price_eu | safe }},00€</td>
-                            <td>{{ box.price_ex | safe }},00€</td>
+                            <td>{{ '%0.2f'|format(box.price_de | safe) }}€</td>
+                            <td>{{ '%0.2f'|format(box.price_eu | safe) }}€</td>
+                            <td>{{ '%0.2f'|format(box.price_ex | safe) }}€</td>
                             <td><button name="delete_box" value="{{ box.id }}" type="submit"><img src="/static/trash.svg" alt="delete" height="25"></button></td>
                             <td><button name="edit_box" value="{{ box.id }}" type="submit"><img src="/static/updateB.svg" alt="edit" height="25"></button></td>
                         </tr>
